--- a/Views/Workout/Index.cshtml
+++ b/Views/Workout/Index.cshtml
@@ -41,7 +41,7 @@
                     @foreach (var exercise in Model)
                     {
                         <tr>
-                            <td width="15%">@exercise.ExerciseTypeId</td>
+                            <td width="15%">@exercise.ExerciseType.ExerciseTypeName</td>
                             <td width="15%">@exercise.Weight</td>
                             <td width="15%">@exercise.Sets</td>
                             <td width="15%">@exercise.Reps</td>
